# open-cb

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
ip/: BorderTracing.cpp  Canny.cpp  Client.cpp  Conversion.cpp  Conversion.h  Filter.cpp  Hough.cpp  Hough.h  KNearestNeighbors.cpp  Main.cpp  Morphological.cpp  OpenCVApplication.cpp  Util.cpp  Util.h
ip/CellsDemo/: rename.py
ip/headers/: BorderTracing.h  CameraReader.h  EncodingMapperIP.h  Filter.h  ImageProcessing.h  KNearestNeighbors.h  Morphological.h  Util.h
ip/headers/classify/: AbstractClassifier.h  Classifier.h  Classify.h  KNearestNeighborsClassifier.h
ip/headers/crop/: Canny.h  Crop.h  Hough.h
ip/headers/get/: CameraReader.h  SignalWaiter.h
ip/sources/: BorderTracing.cpp  CameraReader.cpp  Canny.cpp  Conversion.cpp  EncodingMapperIP.cpp  Filter.cpp  Hough.cpp  ImageProcessing.cpp  KNearestNeighbors.cpp  Morphological.cpp  Util.cpp
ip/sources/classify/: Classify.cpp  KNearestNeighborsClassifier.cpp
ip/sources/crop/: BorderTracing.cpp  Canny.cpp  Conversion.cpp  Crop.cpp  Filter.cpp  Hough.cpp  Morphological.cpp
ip/sources/get/: CameraReader.cpp  SignalWaiter.cpp
log/headers/: Logger.h
log/sources/: Logger.cpp
test/sources/: AttackTest.cpp  MoveTest.cpp  Test.cpp
ua/: ClickableLabel.cpp  ClickableLabel.h  EncodingMapper.cpp  Server.cpp  Server.h  UserApplicationModule.cpp  UserApplicationModule.h  UserApplicationModule.ui  main.cpp
ua/headers/: ClickableLabel.h  EncodingMapper.h  MainWindow.h  TestWindow.h  UserApplication.h
ua/resources/: UserApplication.qrc
ua/sources/: ClickableLabel.cpp  EncodingMapper.cpp  MainWindow.cpp  TestWindow.cpp  UserApplication.cpp
var/: Attack.cpp  Attack.h  Board.cpp  Board.h  Client.cpp  Client.h  Logger.cpp  Logger.h  Main.cpp  Move.cpp  Move.h  Notation.cpp  Notation.h  Server.cpp  Server.h  Validator.cpp  Validator.h  log.txt  var.cpp
var/headers/: Attack.h  Board.h  Map.h  Move.h  ValidationAndResponse.h  Validator.h
var/sources/: Attack.cpp  Board.cpp  Map.cpp  Move.cpp  Notation.cpp  ValidationAndResponse.cpp  Validator.cpp
var/test/: AttackTest.cpp  MoveTest.cpp  test.cpp
